assets/css/stylesheet.css
/*--- imports  ---*/
@import url('https://fonts.googleapis.com/css?family=Julius+Sans+One|Raleway:500,700&display=swap');
/* palette consists of: #34233a, #e9f5d9, #fff7ef, #db8e6b, #c15b5c */

.navbar .icon-reorder{
    font-size:2rem;
    display:none;
}

/*--- Colours & Fonts ---*/

h1,h2,h3,h4,h5{
    font-family:'Julius Sans One', sans-serif;
}

header{
    background-color:#c15b5c;
}

div{
    font-family:'Raleway', sans-serif;
    line-height:1.1;
    font-weight:500;
}

#navmenu{
    background-color:inherit;
}

.navbar .navbar-logo{
    font-family:'Julius Sans One', sans-serif;
    font-weight:bolder;
    font-size:1.4rem;
    color:#fff7ef!important;
    text-decoration:none;
}

.navmenu-item a div{
    color:#fff7ef;
    background-color:#c15b5c;
    font-family: 'Julius Sans One', sans-serif;
    transition-duration:0.3s;
}

.navmenu-item a:hover{
    text-decoration: none;
}

.navmenu-item a div:hover{
    background-color:#f08a5b;
}

.shoe{
    color:#fff7ef;
    background-color:#34233a;
}

.footer-liner{
    color:#fff7ef;
    background-color:#34233a;
}

.footer-liner .partner-logos{
    color:#fff7ef;
    background-color:#34233a;
}

.footer-liner .copyright-info{
    color:#fff7ef;
    background-color:#34233a;
}

.article-new div h3,.old-art-title{
    color:#fafafa;
}

.old-art-title:hover,
.old-art-para:hover,
.old-art-para,
.article-new div p
{
    color:#e9f5d9;
}

.article-new div, .article-old span{
    color:#c15b5c;
}

.article-new div:hover, .article-old span:hover{
    color:#f08a5b;
}

/*---  Header - Navbar  ---*/

header{
    position:fixed;
    z-index:2;
}

.navbar{
    width:100%;
    padding:0 0;
    margin:0;
    height:50px;
}

#navmenu{
    width:50%;
    margin:0;
}

.navmenu-list{
    display:inline-table;
    float:right;
    margin-bottom:0;
    height:50px;
}

.navmenu-item{
    display:table-cell;
    height:100%;
    vertical-align: middle;
}

.navmenu-item a div{
    text-align: center;
    line-height:24px;
    padding: .8rem 0;
    width: 6rem;
}

/*--- page ---*/

#Articles, #About, #Timeline, #Contact{
    font-family:'Raleway', sans-serif;
    padding:30px 5vw;
}

html, body{
    min-height:100%;
}

.title{
    width:100%;
    position:relative;
    text-align:center;
    top:-0.5rem;
    padding-bottom:30px;
}

hr{
    max-width: 30%;
}

/*--- Landing ---*/

.carousel-item{
    height:500px;
}
.carousel-item img{
    object-fit: cover;
}
.carousel{
    margin:30px 0;
}

/*--- articles ---*/

.vertical-rule{
    width:1px;
    border-left: 1px solid #d6d1cc;
    margin:0.7vh 20px 0;
}

.main-art-link:hover{
    text-decoration:none;
}

.article-new{
    background: linear-gradient( rgba(0,0,0,.3),rgba(0,0,0,.3)), url(../images/brewery.jpg);
    background-position: center;
    width:100%;
    height:100%;
}

.article-new div{
    margin: 5px;
    position:absolute;;
    bottom:0;
}

.article-new div h3, .article-new div p{
    position:relative;
    margin:0 0 0 0;
    padding:0;
}

#Articles a, .article-old{
    margin-top:0.7vh;
}

.article-old{
    float:left;
    width:100%;
}

.article-image1{
    background: linear-gradient( rgba(0,0,0,.3),rgba(0,0,0,.3)), url(../images/potion-bottles.jpg);
    background-size:cover;
    background-position: center;
}
.article-image2{
    background: linear-gradient( rgba(0,0,0,.3),rgba(0,0,0,.3)), url(../images/workshop-potion.jpg);
    background-size:cover;
    background-position: center;
}
.article-image3{
    background: linear-gradient( rgba(0,0,0,.3),rgba(0,0,0,.3)), url(../images/Alulu_Beer_Receipt.jpg);
    background-size:cover;
    background-position: center;
}
.article-old a{
    text-decoration: none;
}
/*--- about ---*/

#About{
    padding:50px 5vw;
}

.aims{
    margin:0 15%;
}

/*--- timeline ---*/

.timeline-dot{
    position:absolute;
    width:1vw;
    height:1vw;
    border:1px solid;
    border-radius:50%;
    overflow: hidden;
    background-color:#d6d1cc
}

.tl-img-1,.tl-img-2,.tl-img-3,.tl-img-4{
    background-image:url(../images/alchemists.jpg);
}

.timeline-item-left img, .timeline-item-right img{
    background-position:center;
}

/*---- contact ---*/

#Name, #Email, .formbutton{
    margin:auto;
    margin-bottom:9px;
}

#Name, #Email, #Message{
    width:33vh;
}


/*---- footer ----*/

.shoe{
    position:relative;
    margin:0px;
    bottom:0px;
    padding:1.5rem;
    width:100%;
    left:0;
}

.footer-liner h5{
    display:block;
    font-family:'Julius Sans One', sans-serif;
}

.footer-inner .copyright-info{
    text-align: right;
}

/*--- mobile rules ---*/

@media(max-width:1024px)
{
    /*header*/
    .navbar{
        height:50px;
    }

    #navmenu{
        display:none;
        overflow:hidden;
    }

    .navbar-logo{
        position: relative;
    }

    .navmenu-list{
        background-color:#e99771;
        position:fixed;
        margin-top:1.55rem;
        left:0;
        padding:0;
        width:100vw;
        height:auto;
    }

    .navmenu-item{
        display:block;
        text-align:center;
    }

    .navbar .icon-reorder{
        display:block;
        overflow:hidden;
        float:right;
        color:#fff7ef;
        text-decoration:none;
    }
    .navmenu-item a div{
        background-color:#e99771;
        width:100%;
    }
    /*articles*/
    .vertical-rule{
        display:none;
    }

    .article-new div{
        font-size:2vh;
    }

    .article-new div h3{
        font-weight:700;
    }
}

